--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body {
     min-height: 100vh;
     width: 100%;
 
+    margin: 0;
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -25,12 +27,22 @@ body {
 
 
 /* ----- NAVBAR ----- */
-
-.navBar {
+.navBack {
     position: fixed;
     top: 0;
+    z-index: 10;
 
-    height: 60px;
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.navBar {
+    width: 90%;
 
     padding-top: 20px;
     padding-bottom: 20px;
@@ -53,7 +65,7 @@ body {
 .navLink {
     padding-top: 2px;
     padding-bottom: 2px;
-    margin: 5px;
+    margin: 2px 10px;
     border-bottom: 2px solid transparent;
     transition: 0.5s all ease;
 }
@@ -66,31 +78,77 @@ body {
     border-bottom: 2px solid white;
 }
 
+.navBar p {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
 /* ----- CONTENT ----- */
-.content {
+section {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.firstContent {
     margin-top: 80px;
+    min-height: 80vh;
 }
 
-/* FONTS */
-@font-face {
-    font-family: SFProLight;
-    src: url(./font/SF-Pro.ttf);
-    font-weight: 100;
+.content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
 }
 
+button {
+    margin-top: 20px;
+    padding: 10px 60px 10px 60px;
+    background-color: transparent;
+    border: 2px solid white;
+}
+
+button p {
+    color: white;
+    font-size: 15px;
+    text-transform: uppercase;
+    margin: 0;
+}
+
+/* ----- FONTS ----- */
 @font-face {
     font-family: SFProNormal;
     src: url(./font/SF-Pro.ttf);
     font-weight: 400;
 }
 
-@font-face {
-    font-family: SFProBold;
-    src: url(./font/SF-Pro.ttf);
-    font-weight: 800;
+/* ----- SECTIONS ----- */
+#RENTAL {
+    background-image: url(./img/timewarp.jpg);
+    background-size: cover;
+    background-position: center;
 }
 
-/* FORMATS */
-p {
-    margin: 0;
+#RENTAL h1 {
+    margin-top: 2px;
+    margin-bottom: 2px;
+    font-size: 30px;
+    font-weight: 100;
+}
+
+#RENTAL h2 {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: grey;
+    font-weight: 100;
+    letter-spacing: 1em;
+    text-transform: uppercase;
+}
+
+#TEST {
+    height: 80vh;
+    background-color: orange;
 }
