--- a/style.css
+++ b/style.css
@@ -1,3 +1,73 @@
 body{
     background-color: black;
+    color: white;
+    font-family: Archivo;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.centerDiv {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.logoDiv {
+    display: flex;
+    justify-content: center;
+}
+
+.imprintDiv {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.logo {
+    object-fit: contain;
+    max-width: 300px;
+    filter: invert(1);
+    padding-bottom: 40px;
+}
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 50px;
+    padding-bottom: 20px;
+}
+
+.footerCards {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 14px;
+}
+
+.footerCard {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+
+.copyright {
+    color: grey;
+    font-size: 11px;
+}
+
+@font-face {
+    font-family: "Archivo";
+    src: url(./font/Archivo-VariableFont_wdth\,wght.ttf);
+}
+
+h1, h2, h3, h4, h5 {
+    font-weight: 500;
+}
+
+a:link, a:visited, a:hover {
+    color: gray;
 }
