--- a/style.css
+++ b/style.css
@@ -5,59 +5,144 @@ body{
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
+
+    padding-top: 100px;
+    margin: 0;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
-.centerDiv {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.container {
+    width: 100%;
+    max-width: 1080px;
 }
 
-.logoDiv {
-    display: flex;
-    justify-content: center;
-}
+/* NAV */
+.nav {
+    position: fixed;
+    top: 0;
 
-.imprintDiv {
+    width: 100%;
+    height: 80px;
+
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.logo {
-    object-fit: contain;
-    max-width: 300px;
-    filter: invert(1);
-    padding-bottom: 40px;
-}
-
-.footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-top: 50px;
-    padding-bottom: 20px;
-}
-
-.footerCards {
+.navContainer {
+    height: 100%;
     display: flex;
     flex-direction: row;
-    margin-bottom: 14px;
+    justify-content: space-between;
 }
 
-.footerCard {
+.navLogo {
+    width: 100px;
+    filter: invert(1);
+    padding-left: 20px;
+}
+
+.navLinkBox {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    padding-right: 20px;
+}
+
+.navLink {
+    margin-left: 30px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    font-weight:500;
+}
+
+/* POOL */
+.pool {
+    padding-left: 20px;
+    padding-right: 20px;
+
+}
+
+/* DEVELOPMENT */
+.development {
+    height: 100vh;
+    min-height: fit-content;
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    justify-content: center;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
-.copyright {
-    color: grey;
-    font-size: 11px;
+/* FOOTER*/
+.footer {
+    width: 800px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 50px;
 }
+
+.footer .card {
+    display:flex;
+    flex-direction: column;
+    padding: 20px;
+}
+
+.footer .cardHeading {
+    font-size: 16px;
+}
+
+.footer .cardSocial {
+    display: flex;
+    flex-direction:row;
+    padding: 20px;
+}
+
+.footer img {
+    height: 30px;
+    width: 30px;
+    padding-left: 20px;
+    filter: invert(1);
+}
+
+.footer .copyright {
+    color: gray;
+    font-size: 12px;
+}
+
+/* BUTTONS */
+button {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 15px 20px;
+    font-size: 20px;
+    letter-spacing: 1px;
+    font-weight: bold;
+    max-width: fit-content;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    border: none;
+    background-color: white;
+}
+
+button img {
+    max-height: 20px;
+    scale: 1.3;
+    padding-left: 10px;
+}
+
+/* FITTINGS */
+.autoFit {
+    width: 100%;
+    height: 100%;
+}
+
+/* TYPO */
 
 @font-face {
     font-family: "Archivo";
@@ -70,4 +155,10 @@ h1, h2, h3, h4, h5 {
 
 a:link, a:visited, a:hover {
     color: gray;
+}
+
+.sub {
+    color: gray;
+    text-align: justify;
+    font-size: 20px;
 }
