--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body{
     flex-direction: column;
     align-items: center;
 
-    padding-top: 100px;
     margin: 0;
     max-width: 100%;
     overflow-x: hidden;
@@ -79,11 +78,10 @@ body{
 
 /* FOOTER*/
 .footer {
-    width: 800px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 50px;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 20px;
 }
 
 .footer .card {
@@ -94,6 +92,7 @@ body{
 
 .footer .cardHeading {
     font-size: 16px;
+    padding-bottom: 10px;
 }
 
 .footer .cardSocial {
@@ -109,9 +108,14 @@ body{
     filter: invert(1);
 }
 
-.footer .copyright {
+/* COPYRIGHT */
+.copyright {
+    width: 100%;
     color: gray;
     font-size: 12px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
 }
 
 /* BUTTONS */
