--- a/style.css
+++ b/style.css
@@ -132,6 +132,8 @@ button {
     align-items: center;
     border: none;
     background-color: white;
+    color: black;
+    text-decoration: none;
 }
 
 button img {
