--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     margin-bottom: 20px;
 }
 
