--- a/style.css
+++ b/style.css
@@ -62,11 +62,24 @@ body{
     font-weight:500;
 }
 
+.navLink span {
+    padding-bottom: 10px;
+    transition: 0.2s ease-in-out;
+}
+
+.navLink span:hover {
+    box-shadow: 0 2px white;
+    transition: 0.2s ease-in-out;
+}
+
 /* POOL */
 .pool {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     padding-left: 20px;
     padding-right: 20px;
-
+    min-height: 60vh;
 }
 
 /* DEVELOPMENT */
