--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ body{
 .flexRowBetweenCenter {
     display: flex;
     flex-direction: row;
+    flex-grow: 1;
     justify-content: space-between;
     align-items: center;
 }
