--- a/style.css
+++ b/style.css
@@ -218,6 +218,22 @@ body{
     margin: 20px;
 }
 
+@media screen and (max-width: 800px) {
+
+    .pool {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .pool div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+}
+
 .poolObject {
     border-radius: 20px;
     margin: 20px;
