--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ body{
     margin-bottom: 8px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 600px) {
 
     .navContainer {
         flex-direction: column;
@@ -218,7 +218,7 @@ body{
     margin: 20px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 600px) {
 
     .pool {
         display: flex;
@@ -234,11 +234,31 @@ body{
 
 }
 
+.poolImage {
+    max-width: 300px;
+}
+
+@media screen and (max-width: 600px) {
+    
+    .poolImage {
+        max-width: 100%;
+    }
+
+}
+
 .poolObject {
     border-radius: 20px;
     margin: 20px;
     padding: 40px;
-    max-width: 400px;
+    max-width: 220px;
+}
+
+@media screen and (max-width: 680px) {
+    
+    .poolObject {
+        max-width: 500px;
+    }
+
 }
 
 .poolObjectImage {
@@ -373,9 +393,6 @@ button a:link, button a:visited {
     src: url(./font/Archivo-VariableFont_wdth\,wght.ttf);
 }
 
-h1, h2, h3, h4, h5 {
-}
-
 h1 {
     margin-top: 0.5em;
     font-weight: 700;
@@ -392,8 +409,4 @@ a:link, a:visited, a:hover {
 .sub {
     color: gray;
     text-align: justify;
-}
-
-@media screen and (max-width: 800px) {
-
 }
