--- a/style.css
+++ b/style.css
@@ -124,8 +124,10 @@ body{
     min-height: 80px;
 
     background-color: rgba(0, 0, 0, 0.6);
-    backdrop-filter: blur(40px);
-    -webkit-backdrop-filter: blur(40px);
+    backdrop-filter: blur(30px);
+    -webkit-backdrop-filter: blur(30px);
+
+    z-index: 10;
 }
 
 .navContainer {
@@ -209,19 +211,27 @@ body{
 }
 
 /* HOME */
+.home {
+    overflow: hidden;
+}
+
 .home::before {
     height: 100%;
-    width: 100%;
     content: "";
     position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     background-image: url("./img/home/home_background.jpg");
     background-size: cover;
+    -webkit-background-size: cover;
     background-position: center;
-    z-index: -1;
-    filter: blur(10px) grayscale(100%);
-    -webkit-filter: blur(10px) grayscale(100%);
+    z-index: 0;
+    filter: blur(3px) grayscale(100%);
+    -webkit-filter: blur(3px) grayscale(100%);
     opacity: 0.3;
-    transform: scale(1.1);
+    margin: 0;
 }
 
 /* HEADER */
