--- a/templates/footer.html
+++ b/templates/footer.html
@@ -14,7 +14,7 @@
         </span>
         <a href="./imprint.html">Impressum</a>
         <a href="">Datenschutz</a>
-        <a href="">AGB</a>
+        <a href="./agb.html">AGB</a>
     </div>
 
 </div>
