--- a/templates/footer.html
+++ b/templates/footer.html
@@ -13,7 +13,7 @@
             Rechtliches
         </span>
         <a href="./imprint.html">Impressum</a>
-        <a href="">Datenschutz</a>
+        <a href="./datenschutz.html">Datenschutz</a>
         <a href="./agb.html">AGB</a>
     </div>
 
