--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ body{
     backdrop-filter: blur(30px);
     -webkit-backdrop-filter: blur(30px);
 
-    z-index: 10;
+    z-index: 100;
 }
 
 .navContainer {
@@ -216,7 +216,7 @@ body{
 }
 
 .home::before {
-    height: 100%;
+    height: 100vh;
     content: "";
     position: absolute;
     top: 0;
@@ -237,6 +237,7 @@ body{
 /* HEADER */
 .header {
     height: 100vh;
+    z-index: 10;
 }
 
 /* POOL */
