added gaming to footer

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,6 +6,7 @@
         </span>
         <a href="https://organicconcepts.de">Startseite</a>
         <a href="./pool.html">Pool</a>
+        <a href="./gaming.html">Gaming</a>
     </div>
 
     <div class="card flexColumn">
