--- a/style.css
+++ b/style.css
@@ -185,30 +185,40 @@ body{
 @media screen and (max-width: 600px) {
 
     .navContainer {
-        flex-direction: column;
-        align-items: flex-start;
+      flex-direction: column;
+      align-items: flex-start;
     }
-
-    .navLink {
-        min-height: 60px;
-        width: 100%;
-        font-size: larger;
-        margin-left: 0;
+  
+    .navHeader {
+      flex-direction: row;
+      justify-content: space-between;
+      width: 100%;
     }
-
+  
     .navLinkBox {
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 0;
-        width: 100%;
-        display: none;
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 0;
+      width: 100%;
+      display: none; /* wird per JS eingeblendet */
+      gap: 10px; /* optional: Abstand zwischen Links */
+      margin-top: 10px;
     }
-
-    .hamburger {
-        display: flex;
+  
+    .navLink {
+      min-height: 60px;
+      width: 100%;
+      font-size: larger;
+      margin-left: 0;
+      padding-left: 20px;
+      justify-content: flex-start;
     }
-    
-}
+  
+    .cartIcon {
+      order: 2;
+      margin-right: 20px;
+    }
+  }
 
 /* HOME */
 .home {
@@ -596,9 +606,5 @@ span .sub {
     .cartIcon {
         margin-right: 20px;
         order: 2; /* sicherstellen, dass er rechts steht */
-    }
-
-    .navHeader {
-        flex-direction: row-reverse; /* sorgt dafür, dass Icon ganz rechts steht */
     }
 }
