--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -7,38 +7,38 @@
             <img src="./img/logo/OC_Logo_small.svg" alt="" class="autoFit">
         </div>
 
-        
+        <div class="flexRowCenterCenter">
 
-        <div id="HAMBURGER" class="flexCenter hamburger" onclick="openNav()">
-            <div>
-                <div class="hamburgerPatty"></div>
-                <div class="hamburgerPatty"></div>
-                <div class="hamburgerPatty"></div>
+            <div id="HAMBURGER" class="flexCenter hamburger" onclick="openNav()">
+                <div>
+                    <div class="hamburgerPatty"></div>
+                    <div class="hamburgerPatty"></div>
+                    <div class="hamburgerPatty"></div>
+                </div>
             </div>
-        </div>
 
-    </div>
-
-    <div id="NAVLINKBOX" class="navLinkBox flexRowCenterCenter">
+            <div id="NAVLINKBOX" class="navLinkBox flexRowCenterCenter">
         
-        <div class="navLink flexCenter" onclick="openPool()">
-            <span>Pool</span>
-        </div>
-
-        <div class="navLink flexCenter">
-            <span>Consulting</span>
-        </div>
-
-        <div class="navLink flexCenter">
-            <span>Design</span>
-        </div>
-
+                <div class="navLink flexCenter" onclick="openPool()">
+                    <span>Pool</span>
+                </div>
         
+                <div class="navLink flexCenter">
+                    <span>Consulting</span>
+                </div>
+        
+                <div class="navLink flexCenter">
+                    <span>Design</span>
+                </div>
+        
+            </div>
 
-    </div>
+            <div id="CART" class="cartIcon flexCenter" onclick="openCart()">
+                <img src="./img/icons/cart.png" alt="Cart Icon" />
+            </div>
 
-    <div id="CART" class="cartIcon flexCenter" onclick="openCart()">
-        <img src="./img/icons/cart.png" alt="Cart Icon" />
+        </div>
+        
     </div>
 
 </div>
