--- a/style.css
+++ b/style.css
@@ -123,11 +123,11 @@ body{
     width: 100%;
     min-height: 80px;
 
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0,0,0,0.8);
     backdrop-filter: blur(30px);
     -webkit-backdrop-filter: blur(30px);
 
-    z-index: 100;
+    z-index: 90;
 }
 
 .navContainer {
@@ -255,7 +255,7 @@ body{
     background-size: cover;
     -webkit-background-size: cover;
     background-position: center;
-    z-index: 0;
+    z-index: 5;
     filter: blur(3px) grayscale(100%);
     -webkit-filter: blur(3px) grayscale(100%);
     opacity: 0.3;
