--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -7,7 +7,7 @@
       </div>
 
       <div class="navTools flexRow">
-        <div id="CART" class="cartIcon flexCenter" onclick="openCart()">
+        <div class="navLink cartIcon flexCenter" onclick="openCart()">
           <img src="./img/icons/cart.png" alt="Cart Icon" />
           <span id="cart-count" class="cart-badge">0</span>
         </div>
@@ -28,6 +28,12 @@
       </div>
       <div class="navLink flexCenter"><span>Consulting</span></div>
       <div class="navLink flexCenter"><span>Design</span></div>
+
+      <!-- Hier: Cart-Icon -->
+      <div class="navLink cartIcon flexCenter" onclick="openCart()">
+        <img src="./img/icons/cart.png" alt="Cart Icon" />
+        <span id="cart-count" class="cart-badge">0</span>
+      </div>
     </div>
   </div>
 </div>
