--- a/style.css
+++ b/style.css
@@ -579,7 +579,7 @@ span .sub {
     border-radius: 50%;
     padding: 2px 6px;
     z-index: 10;
-  }
+}
 
 .request-btn {
     background-color: black;
@@ -621,14 +621,14 @@ span .sub {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-left: 20px;
 }
 
 .cartIcon img {
-    height: 26px;
-    width: 26px;
+    height: 24px;
+    width: 24px;
     filter: invert(1);
     cursor: pointer;
-    filter: invert(1);
 }
 
 /* Desktop: Abstand zur rechten Seite */
