--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -29,6 +29,14 @@
             </div>
           </div>
         </div>
+
+        <div id="NAVLINKBOX" class="navLinkBox flexRowCenterCenter">
+          <div class="navLink flexCenter" onclick="openPool()">
+            <span>Pool</span>
+          </div>
+          <div class="navLink flexCenter"><span>Consulting</span></div>
+          <div class="navLink flexCenter"><span>Design</span></div>
+        </div>
       </div>
     </div>
   </div>
