--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -7,7 +7,10 @@
       </div>
 
       <div class="flexRowCenterCenter">
-        <div id="NAVLINKBOX" class="navLinkBox flexRowCenterCenter">
+        <div
+          id="NAVLINKBOX-DESKTOP"
+          class="navLinkBox navDesktop flexRowCenterCenter"
+        >
           <div class="navLink flexCenter" onclick="openPool()">
             <span>Pool</span>
           </div>
@@ -29,15 +32,17 @@
             </div>
           </div>
         </div>
-
-        <div id="NAVLINKBOX" class="navLinkBox flexRowCenterCenter">
-          <div class="navLink flexCenter" onclick="openPool()">
-            <span>Pool</span>
-          </div>
-          <div class="navLink flexCenter"><span>Consulting</span></div>
-          <div class="navLink flexCenter"><span>Design</span></div>
-        </div>
       </div>
+    </div>
+    <div
+      id="NAVLINKBOX-MOBILE"
+      class="navLinkBox navMobile flexRowCenterCenter"
+    >
+      <div class="navLink flexCenter" onclick="openPool()">
+        <span>Pool</span>
+      </div>
+      <div class="navLink flexCenter"><span>Consulting</span></div>
+      <div class="navLink flexCenter"><span>Design</span></div>
     </div>
   </div>
 </div>
