--- a/style.css
+++ b/style.css
@@ -130,6 +130,10 @@ body{
     z-index: 90;
 }
 
+.navMobile {
+    display: none;
+}
+
 .navContainer {
     height: 100%;
     align-items: center;
@@ -546,6 +550,12 @@ span .sub {
         max-width: 500px;
     }
 
+}
+
+@media screen and (min-width: 601px) {
+    .navMobile {
+        display: none;
+    }
 }
 
 /* === VIEWPORT < 600px === */
