--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -3,22 +3,30 @@
 
 <!-- Warenkorb Sidebar -->
 <div id="cartSidebar" class="cart-sidebar">
-    <div class="cart-header">
-        <h2>Warenkorb</h2>
-        <button class="cart-close" onclick="closeCart()">✕</button>
-    </div>
-    <div class="cart-content">
-        <p>Dein Warenkorb ist leer.</p>
-    </div>
-    <div class="cart-footer">
-        <button onclick="showRequestForm()" class="request-btn">Anfrage senden</button>
-      
-        <form id="requestForm" class="request-form" onsubmit="submitRequest(event)">
-          <input type="text" name="vorname" placeholder="Vorname" required>
-          <input type="text" name="nachname" placeholder="Nachname" required>
-          <input type="email" name="email" placeholder="E-Mail" required>
-          <input type="tel" name="telefon" placeholder="Mobilnummer" required>
-          <button type="submit">Absenden</button>
-        </form>
-      </div>
+  <div class="cart-header">
+    <h2>Warenkorb</h2>
+    <button class="cart-close" onclick="closeCart()">✕</button>
+  </div>
+  <div class="cart-content">
+    <p>Dein Warenkorb ist leer.</p>
+  </div>
+  <div class="cart-footer">
+    <button onclick="showRequestForm()" class="request-btn">
+      Anfrage senden
+    </button>
+
+    <form id="requestForm" class="request-form" onsubmit="submitRequest(event)">
+      <label for="vorname">Vorname:</label>
+      <input type="text" name="vorname" placeholder="Vorname" required />
+      <label for="nachnmame">Nachname:</label>
+      <input type="text" name="nachname" placeholder="Nachname" required />
+      <label for="email">E-Mail:</label>
+      <input type="email" name="email" placeholder="E-Mail" required />
+      <label for="mobil">Mobil:</label>
+      <input type="tel" name="mobil" placeholder="Mobil" required />
+      <label for="date">Datum der Veranstaltung:</label>
+      <input type="date" name="date" placeholder="Datum" required />
+      <button type="submit">Absenden</button>
+    </form>
+  </div>
 </div>
