--- a/style.css
+++ b/style.css
@@ -187,6 +187,7 @@ body{
 /* HOME */
 .home {
     overflow: hidden;
+    position: relative;
 }
 
 .home::before {
@@ -197,7 +198,7 @@ body{
     right: 0;
     bottom: 0;
     left: 0;
-    background-image: url("./img/home/home_background.jpg");
+    background-image: url(./img/home/home_background.jpg);
     background-size: cover;
     -webkit-background-size: cover;
     background-position: center;
@@ -246,18 +247,68 @@ body{
 }
 
 /* CONSULTING */
-.consulting {
-    min-height: 40vh;
+.consultingHead {
+    min-height: 100vh;
+}
+
+.consultingCard {
     border-radius: 20px;
     margin: 20px;
     padding: 40px;
+    gap: 20px;
 }
 
-/* DESIGN */
-.design {
-    padding: 40px;
-    margin: 20px;
+.consultingText {
+    padding: 20px;
+    max-width: 560px;
+    margin-bottom: 60px;
 }
+
+.consultingItems {
+    padding: 20px;
+    gap: 40px;
+}
+
+.consultingItem {
+    width: 100%;
+    max-width: 400px;
+    padding: 20px;
+    padding-bottom: 40px;
+    border-radius: 20px;
+}
+
+.consultingCallToAction {
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+/* EVENTS */
+.events {
+    min-height: 60vh;
+    overflow: hidden;
+    position: relative;
+}
+
+.events::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: url("./img/events/DekmantelFestival_20220806_1727_Kleo_HL_6206_BartHeemskerk_Socials-1.jpg");
+    background-size: cover;
+    -webkit-background-size: cover;
+    background-position: bottom;
+    z-index: 5;
+    filter: blur(1px);
+    -webkit-filter: blur(1px);
+    opacity: 0.3;
+    margin: 0;
+}
+
+
+
 
 /* GAMING */
 .gaming {
@@ -280,7 +331,7 @@ body{
 
 /* FOOTER*/
 .footer {
-    justify-content:space-around;
+    justify-content: space-between;
     align-items: flex-start;
     margin-top: 20px;
     margin-bottom: 20px;
@@ -291,6 +342,7 @@ body{
 .footer .card {
     padding: 20px;
     font-size: 14px;
+    min-width: 100px;
 }
 
 .footer .card .cardHeading {
@@ -512,6 +564,7 @@ span .sub {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    box-sizing: border-box;
   }
 
 .request-form input {
@@ -519,6 +572,9 @@ span .sub {
     font-size: 16px;
     border-radius: 6px;
     border: 1px solid #ccc;
+    display: block;
+    max-width: 100%;
+    margin-top: 5px;
 }
 
 .request-form button[type="submit"] {
@@ -529,6 +585,27 @@ span .sub {
     border: none;
     cursor: pointer;
     border-radius: 8px;
+}
+
+.request-form fieldset {
+  border: none;
+  padding: 0;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.request-form legend {
+  font-weight: bold;
+  margin-bottom: 10px;
+  font-size: 16px;
+  padding: 0;
+}
+
+.request-form label {
+  display: block;
+  margin-top: 10px;
+  font-weight: 500;
 }
 
 .close-request-form {
@@ -674,4 +751,17 @@ span .sub {
     .cart-sidebar {
         max-width: 100%;
     }
+
+    .consultingCard {
+        flex-direction: column;
+    }
+
+    .consultingItems {
+        gap: 20px;
+    }
+
+    .consultingItem {
+        max-width: 100%;
+    }
+
 }
