--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,16 +1,23 @@
-<div class="footer flexRowCenter">
+<div class="footer flexRow wrap">
   <div class="card flexColumn">
-    <span class="cardHeading"> Navigation </span>
-    <a href="../">Startseite</a>
+    <span class="cardHeading">Navigation</span>
+    <a href="../">Home</a>
+    <a href="../consulting/">Consulting</a>
     <a href="../pool/">Pool</a>
-    <a href="../gaming.html">Gaming</a>
+    <a href="../gaming/">Gaming</a>
   </div>
 
   <div class="card flexColumn">
-    <span class="cardHeading"> Rechtliches </span>
-    <a href="../imprint.html">Impressum</a>
-    <a href="../datenschutz.html">Datenschutz</a>
-    <a href="../agb.html">AGB</a>
+    <span class="cardHeading">Redirects</span>
+    <a href="../events/">Events & Tickets</a>
+    <a href="" onclick="openDiscord()">Discord Server</a>
+  </div>
+
+  <div class="card flexColumn">
+    <span class="cardHeading">Legal</span>
+    <a href="../imprint/">Impressum</a>
+    <a href="../privacy/">Datenschutz</a>
+    <a href="../agb/">AGB</a>
   </div>
 </div>
 
