updated Footer and small changes

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -22,9 +22,24 @@
 </div>
 
 <div class="copyright flexColumnCenterCenter">
-  <div class="socialIcons flexRow">
-    <img src="../img/icons/instagram.png" alt="" onclick="openInstagram()" />
-    <img src="../img/icons/github.png" alt="" />
+  <div class="socialIcons flexRowCenter">
+    <img
+      src="../img/icons/whatsapp.png"
+      alt="WhatsApp"
+      onclick="openWhatsApp()"
+    />
+    <img
+      src="../img/icons/instagram.png"
+      alt="Instagram"
+      onclick="openInstagram()"
+    />
+    <img src="../img/icons/discord.png" alt="Discord" onclick="openDiscord()" />
+    <img src="../img/icons/github.png" alt="GitHub" onclick="openGitHub()" />
+    <img
+      src="../img/icons/mail.png"
+      alt="Mail"
+      onclick="window.location.href='mailto:info@organicconcepts.de'"
+    />
   </div>
 
   <span>Copyright © 2025 Organic Concepts</span>
