--- a/templates/footer.html
+++ b/templates/footer.html
@@ -13,6 +13,7 @@
     <a href="/imprint/">Impressum</a>
     <a href="/privacy/">Datenschutz</a>
     <a href="/agb/">AGB</a>
+    <a href="/agb/automation-plans/">AGB 2</a>
   </div>
 </div>
 
