--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,6 +6,7 @@
     <a href="/pool/">Pool</a>
     <a href="" onclick="openEvents()">Events</a>
     <a href="/gaming/">Gaming</a>
+    <a href="/contect/">Kontakt</a>
   </div>
 
   <div class="card flexColumn">
